--- a/index.html
+++ b/index.html
@@ -42,9 +42,29 @@
     </header>
 
 
-    </header>
-
     <main>
+
+        <section class="teams-container">
+
+            <div class="teams-img-container">
+
+                <img src="/images/team1.png" alt="">
+                <img src="/images/team2.png" alt="">
+                <img src="/images/team3.png" alt="">
+                <img src="/images/team4.png" alt="">
+
+            </div>
+            <!-- <span class="quick-list-content"></span> -->
+            <div class="teams-content">
+
+                <h3 class="teams-title">
+                    <span class="quick-list text-light-gray">Quick list</span> of Our
+                    <span class="quick-list-feature">Features</span></h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+        </section>
 
     </main>
 
